fixed bugs, finished monitor, loader and version